# Studying

./: .gitmodules
AngularJS/angular-phonecat/app/: app.animations.css  app.config.js  app.module.js  index.html
AppSync/: package.json
AxiosPDF/: index.mjs  package.json
CMake/: CMakeCache.txt  CMakeLists.txt  tutorial.cxx
CMake/MathFunctions/: CMakeLists.txt
CMake2/Example1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello
CMake2/Example5/: CMakeLists.txt
DjangoRestFramework/tutorial/: db.sqlite3
DjangoRestFramework/tutorial/snippets/: models.py  serializers.py  views.py
ECS/: Dockerfile
Emacs/: README.md
Fargate/tutorial/: docker-compose.yml  ecs-params.yml
HTTPServer/: README.md  a.out  client.cpp  main.cpp  server.cpp
MixingFortranAndC/CMake_Fortran_in_Cpp/: CMakeLists.txt  testC.cpp
MixingFortranAndC/CMake_Xcode/: CMakeLists.txt  test.cpp
MixingFortranAndC/C_in_Fortran/: test
MixingFortranAndC/Fortran_in_Cpp/: test
MixingFortranAndC/TeubnerMixing/: CMakeLists.txt  main.cpp  teubner.f
MixingFortranAndC/XCode_CMake_FortranMixing/: CMakeLists.txt
Prisma/: index.js  package-lock.json  package.json  prisma.yml
ScipyCurveFit/: main.py
amplify-multiple-environments/amplify/: team-provider-info.json
docker/: docker-compose.yml
dockerNode/: Dockerfile
forever/: index.js
ipfs/: index.html
my-app/: package.json
my-app/src/: App.js  AppSync.js
platoformio/: platformio.ini
platoformio/src/: main.cpp
reactFullstack/server/: package.json
slsGraphql/: handler.js  package.json  resolvers.js
(+8 files in other folders)
